# evccDisplay

./: .gitignore  README.md  platformio.ini
include/: lv_conf.h
src/: main.cpp  main.h  mqtt.cpp  mqtt.h  secrets_sample.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_moby16r.c  ui_font_moby18.c  ui_font_ubuntu16b.c  ui_font_ubuntu20b.c  ui_font_ubuntu30b.c
src/ui/images/: ui_img_1743782298.c  ui_img_1743798666.c  ui_img_auto24_png.c  ui_img_batery24_png.c  ui_img_batery40_png.c  ui_img_happy1_png.c  ui_img_house24_png.c  ui_img_power24_png.c  ui_img_solar24_png.c
src/ui/screens/: ui_MainScreen.c
